--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             flowers for ingredients!
           </h2>
           <div class="hero__more">
-            <a href="#"
+            <a href="#recipes"
               >Find more
               <span><i class="fas fa-chevron-down"></i></span>
             </a>
@@ -55,7 +55,7 @@
     <main class="main">
       <div class="container">
         <h2 class="center">Looking for inspiration?</h2>
-        <section class="recipes">
+        <section class="recipes" id="recipes">
           <article class="recipes__entry">
             <div class="recipes__cover">
               <img
